--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>          
-            <div id="acessibilidade" class="menu-acessibilidade"> 
-                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
+            <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidade" class="btn btn-primary fw-bold 
+                rotacao-botao" aria-expanded="false">acessibilidade</button>
                 <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
-                        <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
-                        <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
-                        <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar
+                    o tamanho da fonte">A+</button>
+                    <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir
+                    o tamanho da fonte">A-</button>
+                    <button id="alterna-contraste" class="btn btn-primary fw-bold"> <i class="bi
+                    bi-shadows"></i></button>
                 </div>
-        </div>
+            </div>
        ] </nav>
        
     </header>
@@ -55,6 +59,15 @@ Acervo Do Arquivo Nacional " class="img-fluid img-início">
         <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria">
+
+
+                <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália"></section>
+                    <div class="container d-flex align-itens-center ">
+                    <div class="col-4 d-flex justify-content-center fundo-galeria">
+                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading "lazy">
+                    </div>
+                    <div class="col-5">
+                    <h2>0 que foi a Tropicália?</h2>
 
     
              </div>
@@ -124,7 +137,7 @@ Acervo Do Arquivo Nacional " class="img-fluid img-início">
         <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
     </footer>
   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
 
 </body>
-
